# tma4280

./: .gitignore  .kateproject  README.md
ex01/: CMakeLists.txt  matrix.cpp  notes.txt
ps01/: CMakeLists.txt  matrix.cpp  notes.txt
ps02/: CMakeLists.txt  code.cpp  notes.txt
ps03/: CMakeLists.txt  notes.txt
ps04/: CMakeLists.txt  algebra.cpp  algebra.h  ps04.cpp  ps04.h
ps04-report/: report.tex
ps06/: CMakeLists.txt  job.sh  poisson.cpp  poisson.h
ps06-report/: report.tex
ps06-report/results/: SummarizeResults.m  average_runs.m  b.txt  c.txt  convergence.txt  mpi.txt  omp.txt  set_dimensions.m  time_to_speedup.m
ps06-report/results/b/run1/: poisson-b.e381319  poisson-b.e381320  poisson-b.e381324  poisson-b.e381325  poisson-b.e381326  poisson-b.e381327  poisson-b.e381328  poisson-b.e381329  poisson-b.e381330  poisson-b.e381331  poisson-b.e381332  poisson-b.e381333  poisson-b.e381345  poisson-b.e381346  poisson-b.e381347  poisson-b.e381348  poisson-b.e381349  poisson-b.e381350  poisson-b.e381351  poisson-b.e381352  poisson-b.e381353  poisson-b.e381354  poisson-b.e381361  poisson-b.e381373  poisson-b.e381374  poisson-b.e381375  poisson-b.e381376  poisson-b.e381377  poisson-b.e381378  poisson-b.e381379  poisson-b.e381380  poisson-b.e381381  poisson-b.e381382  poisson-b.e381383  poisson-b.e381384  poisson-b.e381387  poisson-b.e381416  poisson-b.e381420  poisson-b.o381319  poisson-b.o381320  (+47 more)
ps06-report/results/b/run2/: poisson-b.e381503  poisson-b.e381504  poisson-b.e381505  poisson-b.e381506  poisson-b.e381507  poisson-b.e381508  poisson-b.e381509  poisson-b.e381510  poisson-b.e381511  poisson-b.e381512  poisson-b.e381513  poisson-b.e381515  poisson-b.e381516  poisson-b.e381517  poisson-b.e381518  poisson-b.e381519  poisson-b.e381520  poisson-b.e381521  poisson-b.e381522  poisson-b.e381523  poisson-b.o381503  poisson-b.o381504  poisson-b.o381505  poisson-b.o381506  poisson-b.o381507  poisson-b.o381508  poisson-b.o381509  poisson-b.o381510  poisson-b.o381511  poisson-b.o381512  poisson-b.o381513  poisson-b.o381514  poisson-b.o381515  poisson-b.o381516  poisson-b.o381517  poisson-b.o381518  poisson-b.o381519  poisson-b.o381520  poisson-b.o381521  poisson-b.o381522  (+1 more)
ps06-report/results/b/run3/: poisson-b.e381615  poisson-b.e381616  poisson-b.e381617  poisson-b.e381618  poisson-b.o381615  poisson-b.o381616  poisson-b.o381617  poisson-b.o381618  poisson-b.o381619  poisson-b.o381621  poisson-b.o381622  poisson-b.o381623  poisson-b.o381624  poisson-b.o381625  poisson-b.o381627  poisson-b.o381628  poisson-b.o381629  poisson-b.o381630  poisson-b.o381631  poisson-b.o381632  poisson-b.o381633  poisson-b.o381635  poisson-b.o381636  poisson-b.o381647
ps06-report/results/b/run4/: poisson-b.e381754  poisson-b.o381686  poisson-b.o381704  poisson-b.o381707  poisson-b.o381754  poisson-b.o381755  poisson-b.o382184  poisson-b.o382185
ps06-report/results/c/run1/: poisson.o380400  poisson.o380401  poisson.o380402  poisson.o380403  poisson.o380404  poisson.o380405  poisson.o380406  poisson.o380407  poisson.o380408  poisson.o380409  poisson.o380410  poisson.o380411  poisson.o380412  poisson.o380413  poisson.o380414  poisson.o380415  poisson.o380416  poisson.o380417  poisson.o380418  poisson.o380419  poisson.o380420  poisson.o380421  poisson.o380422  poisson.o380423  poisson.o380424  poisson.o380425  poisson.o380426  poisson.o380427  poisson.o380428  poisson.o380429  poisson.o380430  poisson.o380431  poisson.o380432  poisson.o380433  poisson.o380434  poisson.o380435  poisson.o380436  poisson.o380437  poisson.o380438  poisson.o380439  (+20 more)
ps06-report/results/c/run2/: poisson.e380493  poisson.e380494  poisson.e380495  poisson.e380496  poisson.e380497  poisson.e380498  poisson.e380499  poisson.e380502  poisson.e380504  poisson.e380507  poisson.e380508  poisson.e380510  poisson.e380512  poisson.e380514  poisson.e380516  poisson.e380518  poisson.e380520  poisson.e380521  poisson.e380523  poisson.e380524  poisson.e380526  poisson.e380527  poisson.e380529  poisson.e380530  poisson.e380532  poisson.e380533  poisson.e380535  poisson.e380536  poisson.e380538  poisson.e380539  poisson.e380540  poisson.e380542  poisson.e380543  (+107 more)
ps06/src/: CMakeLists.txt  job.sh  poisson.cpp
(+115 files in other folders)
